[gd_scene load_steps=11 format=3 uid="uid://n183p1en26jy"]

[ext_resource type="Script" path="res://Menus/SettingsMenu/settings_menu_Main_menu.gd" id="1_k8ygi"]
[ext_resource type="Texture2D" uid="uid://bq57kcmnv8ggp" path="res://Resources/Sprites/CheckBox/checkbox_normal.png" id="2_pfy7o"]
[ext_resource type="Texture2D" uid="uid://bl7gtlqdfuvc5" path="res://Resources/Sprites/CheckBox/checkbox_pressed.png" id="3_rmeqv"]
[ext_resource type="Texture2D" uid="uid://c1sklka53w4ud" path="res://Resources/Sprites/CheckBox/checkbox_hover.png" id="4_vkeq5"]
[ext_resource type="Texture2D" uid="uid://ds1i31tr5wqrh" path="res://Resources/Sprites/icon_16px.png" id="5_v80b4"]
[ext_resource type="StyleBox" uid="uid://c2nqiwudvaseb" path="res://Resources/Styles/Standard Button/standard_button_normal_style.tres" id="6_4uwqd"]
[ext_resource type="StyleBox" uid="uid://doq33mqbb3i7r" path="res://Resources/Styles/Standard Button/standard_button_hover_style.tres" id="7_pl34q"]
[ext_resource type="StyleBox" uid="uid://dd6kvr76jafiq" path="res://Resources/Styles/Standard Button/standard_button_pressed_style.tres" id="8_r4mqo"]

[sub_resource type="ImageTexture" id="ImageTexture_58v6b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjifk"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_k8ygi")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 261.0
offset_top = 142.0
offset_right = -251.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.768627)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 263.0
offset_top = 153.0
offset_right = 903.0
offset_bottom = 198.0
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="FullscreenButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = 219.0
offset_right = 554.0
offset_bottom = 235.0
toggle_mode = true
texture_normal = ExtResource("2_pfy7o")
texture_pressed = ExtResource("3_rmeqv")
texture_hover = ExtResource("4_vkeq5")

[node name="Label" type="Label" parent="FullscreenButton"]
layout_mode = 0
offset_left = -102.0
offset_top = -4.0
offset_right = -23.0
offset_bottom = 20.0
text = "Fullscreen"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 281.0
offset_right = 681.0
offset_bottom = 298.0
theme_override_icons/grabber = ExtResource("5_v80b4")
theme_override_icons/grabber_highlight = ExtResource("5_v80b4")
theme_override_icons/tick = SubResource("ImageTexture_58v6b")
theme_override_styles/slider = SubResource("StyleBoxFlat_hjifk")
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="MasterVolumeSlider"]
layout_mode = 0
offset_left = 173.0
offset_top = -3.0
offset_right = 186.0
offset_bottom = 21.0
text = "8"

[node name="MasterLabel" type="Label" parent="MasterVolumeSlider"]
layout_mode = 0
offset_left = -88.0
offset_top = -4.0
offset_right = -33.0
offset_bottom = 20.0
text = "Master"

[node name="MusicVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 312.0
offset_right = 681.0
offset_bottom = 329.0
theme_override_icons/grabber = ExtResource("5_v80b4")
theme_override_icons/grabber_highlight = ExtResource("5_v80b4")
theme_override_icons/tick = SubResource("ImageTexture_58v6b")
theme_override_styles/slider = SubResource("StyleBoxFlat_hjifk")
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="MusicVolumeSlider"]
layout_mode = 0
offset_left = 173.0
offset_top = -3.0
offset_right = 186.0
offset_bottom = 21.0
text = "8"

[node name="MusicLabel" type="Label" parent="MusicVolumeSlider"]
layout_mode = 0
offset_left = -88.0
offset_top = -4.0
offset_right = -33.0
offset_bottom = 20.0
text = "Music"

[node name="EffectsVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 344.0
offset_right = 681.0
offset_bottom = 361.0
theme_override_icons/grabber = ExtResource("5_v80b4")
theme_override_icons/grabber_highlight = ExtResource("5_v80b4")
theme_override_icons/tick = SubResource("ImageTexture_58v6b")
theme_override_styles/slider = SubResource("StyleBoxFlat_hjifk")
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="EffectsVolumeSlider"]
layout_mode = 0
offset_left = 173.0
offset_top = -3.0
offset_right = 186.0
offset_bottom = 21.0
text = "8"

[node name="EffectsLabel" type="Label" parent="EffectsVolumeSlider"]
layout_mode = 0
offset_left = -88.0
offset_top = -4.0
offset_right = -33.0
offset_bottom = 20.0
text = "Effects"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 521.0
offset_top = 441.0
offset_right = 649.0
offset_bottom = 470.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("6_4uwqd")
theme_override_styles/hover = ExtResource("7_pl34q")
theme_override_styles/pressed = ExtResource("8_r4mqo")
text = "BACK"

[connection signal="toggled" from="FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="drag_ended" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_ended"]
[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="drag_ended" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="drag_ended" from="EffectsVolumeSlider" to="." method="_on_effects_volume_slider_drag_ended"]
[connection signal="value_changed" from="EffectsVolumeSlider" to="." method="_on_effects_volume_slider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
